--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Cedric Martin Nel's Pierre</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css">
   <link rel="icon" href="images/letter-t.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
